--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,10 +1,14 @@
-.App {
+.app {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
+
+  .room-code-error {
+    color: red;
+  }
 }
 
 table {
