--- a/src/components/JGameDisplay/JGameDisplay.scss
+++ b/src/components/JGameDisplay/JGameDisplay.scss
@@ -41,12 +41,29 @@
 
         .clue {
           margin-top: 8px;
-          font-size: 4em;
-          text-shadow: 8px 8px black;
-          color: #ddaa55;
 
           .money-text {
+            font-size: 4em;
+            text-shadow: 8px 8px black;
+            color: #ddaa55;
             transform: scale(1, 1.3);
+          }
+
+          .clue-text {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 50px 150px;
+            font-size: 5em;
+            font-weight: bold;
+            background-color: #0309d0;
+            z-index: 10;
           }
         }
       }
