--- a/src/components/JGameDisplay/JGameDisplay.scss
+++ b/src/components/JGameDisplay/JGameDisplay.scss
@@ -9,7 +9,7 @@
       text-align: center;
     }
 
-    .j-round-cols {
+    .j-round-columns {
       display: flex;
       padding: 8px 4px;
       background-color: #111;
@@ -19,7 +19,7 @@
         display: flex;
         flex-direction: column;
         width: 220px;
-        margin: 0 4px;
+        margin: 0 3px;
 
         .category-title,
         .clue {
@@ -34,13 +34,13 @@
         }
 
         .category-title {
-          margin-bottom: 8px;
+          margin-bottom: 6px;
           font-size: 1.5em;
           text-shadow: 6px 6px black;
         }
 
         .clue {
-          margin-top: 8px;
+          margin-top: 6px;
 
           .money-text {
             font-size: 4em;
