--- a/src/components/HostView/HostView.scss
+++ b/src/components/HostView/HostView.scss
@@ -6,6 +6,23 @@
   height: 100vh;
   color: white;
 
+  .scoreboard {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    border-radius: 0 0 10px 0;
+    box-shadow: 10px 10px 10px black;
+    background-color: #eee;
+    color: black;
+
+    .player-scores-row {
+      display: flex;
+    }
+  }
+
   .host-controls {
     position: absolute;
     top: 0;
