--- a/src/components/JGameDisplay/JGameDisplay.scss
+++ b/src/components/JGameDisplay/JGameDisplay.scss
@@ -58,6 +58,7 @@
             bottom: 0;
             left: 0;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             text-align: center;
@@ -66,6 +67,10 @@
             font-weight: bold;
             background-color: $jeopardyBlue;
             z-index: 10;
+          }
+
+          .clue-progress {
+            width: 100px;
           }
         }
       }
