--- a/src/index.scss
+++ b/src/index.scss
@@ -21,5 +21,6 @@ input {
 Project-wide z-index values (so it's never surprising what appears on top of what).
 
 10: fullscreen clue
+10: fullscreen submission summary
 
 */
