Bigger room code

--- a/src/components/HostView/HostView.scss
+++ b/src/components/HostView/HostView.scss
@@ -21,6 +21,7 @@
     box-shadow: 10px 10px 10px $darkest;
     background-color: $lighter;
     color: $darkest;
+    font-size: 4em;
 
     .room-code {
       font-size: 2em;
