--- a/src/index.scss
+++ b/src/index.scss
@@ -22,5 +22,6 @@ Project-wide z-index values (so it's never surprising what appears on top of wha
 
 10: fullscreen clue
 10: fullscreen submission summary
+15: host controls
 
 */
