--- a/src/components/JGameDisplay/JGameDisplay.scss
+++ b/src/components/JGameDisplay/JGameDisplay.scss
@@ -6,7 +6,7 @@
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
 
-  .submissionSummary {
+  .submission-summary {
     position: absolute;
     top: 0;
     right: 0;
@@ -63,7 +63,7 @@
             transform: scale(1, 1.3);
           }
 
-          .clue-text {
+          .fullscreen-clue {
             position: absolute;
             top: 0;
             right: 0;
@@ -79,9 +79,6 @@
             font-weight: bold;
             background-color: $jeopardyBlue;
             z-index: 10;
-          }
-
-          .clue-progress {
           }
         }
       }
