--- a/src/components/JGameDisplay/JGameDisplay.scss
+++ b/src/components/JGameDisplay/JGameDisplay.scss
@@ -6,16 +6,29 @@
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
 
+  .clue-text {
+    text-align: center;
+  }
+
   .submission-summary {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    font-size: 5em;
-    font-weight: bold;
+    font-size: 3em;
     background-color: $jeopardyBlue;
     z-index: 10;
+  }
+
+  .answer-text {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin: 20px;
   }
 
   .j-round {
@@ -43,7 +56,6 @@
           height: 130px;
           padding: 25px;
           text-align: center;
-          font-weight: bold;
           background-color: $jeopardyBlue;
         }
 
@@ -76,9 +88,24 @@
             text-align: center;
             padding: 50px 150px;
             font-size: 5em;
-            font-weight: bold;
             background-color: $jeopardyBlue;
             z-index: 10;
+          }
+
+          .fullscreen-clue-category {
+            font-size: 1.2em;
+            font-weight: bold;
+            margin:20px
+          }
+
+          .fullscreen-clue-money {
+            font-size: .8em;
+            margin:15px
+          }
+
+          .fullscreen-clue-text {
+            font-size: 1em;
+            margin:20px;
           }
         }
       }
