Fixed button width in grading view

--- a/src/components/PlayerView/PlayerView.scss
+++ b/src/components/PlayerView/PlayerView.scss
@@ -47,6 +47,7 @@
   .grading-buttons {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 10px;
     margin: 10px;
   }
