No scope styling

--- a/src/components/HostView/HostView.scss
+++ b/src/components/HostView/HostView.scss
@@ -10,8 +10,8 @@
 
   .host-controls {
     position: absolute;
-    top: 0;
     right: 0;
+    bottom: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
