Border radii for absolute positioned divs

--- a/src/components/HostView/HostView.scss
+++ b/src/components/HostView/HostView.scss
@@ -17,7 +17,7 @@
     justify-content: center;
     align-items: center;
     padding: 15px;
-    border-radius: 0 0 0 10px;
+    border-radius: 10px 0 0 0;
     box-shadow: 10px 10px 10px $darkest;
     background-color: $lighter;
     color: $darkest;
