--- a/src/components/Scoreboard/Scoreboard.scss
+++ b/src/components/Scoreboard/Scoreboard.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   padding: 15px;
-  border-radius: 0 0 10px 0;
+  border-radius: 0 10px 0 0;
   box-shadow: 10px 10px 10px $darkest;
   background-color: $lighter;
   color: $darkest;
