Size things for the big screen

--- a/src/components/Scoreboard/Scoreboard.scss
+++ b/src/components/Scoreboard/Scoreboard.scss
@@ -6,9 +6,10 @@
   left: 0;
   display: flex;
   flex-direction: column;
-  padding: 15px;
+  padding: 30px;
   border-radius: 0 10px 0 0;
   box-shadow: 10px 10px 10px $darkest;
+  font-size: 3vh;
   background-color: $lighter;
   color: $darkest;
 
