--- a/src/components/HostView/HostView.scss
+++ b/src/components/HostView/HostView.scss
@@ -3,33 +3,45 @@
 .host-view {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   width: 100vw;
   height: 100vh;
   color: $white;
+  background-size: 100% 100%;
 
   .host-controls {
     position: absolute;
+    top: 0;
     right: 0;
-    bottom: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 15px;
-    border-radius: 10px 0 0 0;
+    padding: 30px;
+    border-radius: 0 0 0 10px;
     box-shadow: 10px 10px 10px $darkest;
     background-color: $lighter;
     color: $darkest;
     z-index: 15;
 
     &:not(.has-game-been-started) {
-      font-size: 4em;
+      font-size: 4vh;
+
+      .room-code {
+        font-size: 12vh;
+      }
+    }
+
+    &.has-game-been-started {
+      font-size: 2vh;
+
+      .room-code {
+        font-size: 6vh;
+      }
     }
 
     .room-code {
-      margin-bottom: 15px;
-      font-size: 2em;
+      margin-bottom: 30px;
     }
   }
 
@@ -39,13 +51,16 @@
     justify-content: flex-end;
     align-items: center;
     height: 100%;
-    padding-bottom: 100px;
+    padding-bottom: 20vh;
 
     .player-list {
-      margin-bottom: 30px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 2vh;
 
       .player-in-lobby {
-        font-size: 6em;
+        font-size: 5vh;
         font-weight: 200;
       }
     }
