--- a/src/components/JGameDisplay/JGameDisplay.scss
+++ b/src/components/JGameDisplay/JGameDisplay.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 13vh;
   font-family: Arial, Helvetica, sans-serif;
 
   .clue-text {
@@ -25,23 +26,25 @@
     z-index: 10;
 
     .instruction-text {
-      font-size: 2em;
-      margin-bottom: 20px;
-    }
-
-    .clue-text,
-    .answer-text {
-      font-size: 3em;
-      margin-top: 30px;
+      font-size: 8vh;
     }
 
     .grading-progress {
-      margin-top: 50px;
+      margin-top: 4vh;
+    }
+
+    .clue-text {
+      font-size: 4vh;
+      margin-top: 6vh;
+    }
+
+    .answer-text {
+      font-size: 8vh;
     }
 
     .player-submissions {
-      font-size: 3em;
-      margin-top: 50px;
+      font-size: 5vh;
+      margin-top: 6vh;
     }
   }
 
@@ -59,7 +62,7 @@
       .category {
         display: flex;
         flex-direction: column;
-        width: 220px;
+        width: 10vw;
         margin: 0 3px;
 
         .category-title,
@@ -67,7 +70,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
-          height: 130px;
+          height: 10.7vh;
           padding: 25px;
           text-align: center;
           background-color: $jeopardyBlue;
@@ -75,7 +78,7 @@
 
         .category-title {
           margin-bottom: 6px;
-          font-size: 1.5em;
+          font-size: 2vh;
           text-shadow: 6px 6px $darkest;
         }
 
@@ -83,7 +86,7 @@
           margin-top: 6px;
 
           .money-text {
-            font-size: 4em;
+            font-size: 5vh;
             text-shadow: 8px 8px $darkest;
             color: $jeopardyYellow;
             transform: scale(1, 1.3);
@@ -101,25 +104,24 @@
             align-items: center;
             text-align: center;
             padding: 50px 150px;
-            font-size: 5em;
             background-color: $jeopardyBlue;
             z-index: 10;
           }
 
           .fullscreen-clue-category {
-            font-size: 1.2em;
+            font-size: 5vh;
             font-weight: bold;
             margin: 20px;
           }
 
           .fullscreen-clue-money {
-            font-size: 0.8em;
+            font-size: 5vh;
             margin: 15px;
           }
 
           .fullscreen-clue-text {
-            font-size: 1em;
-            margin: 20px;
+            font-size: 8vh;
+            margin: 10vh 0;
           }
 
           .clue-progress {
@@ -128,5 +130,11 @@
         }
       }
     }
+  }
+
+  .taped-date {
+    position: absolute;
+    right: 0;
+    bottom: 0;
   }
 }
