Made some of the tweaks from first family play feedback

--- a/src/components/JGameDisplay/JGameDisplay.scss
+++ b/src/components/JGameDisplay/JGameDisplay.scss
@@ -45,6 +45,19 @@
     .player-submissions {
       font-size: 5vh;
       margin-top: 6vh;
+
+      .player-submission-row {
+        display: flex;
+        justify-content: space-between;
+
+        &.has-graded {
+          opacity: 0.5;
+        }
+
+        > *:not(:last-child) {
+          margin-right: 1vw;
+        }
+      }
     }
   }
 
